--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     }
 
     .wrapper {
-        width: 40vw;
+        width: 50vw;
         margin: 0 9rem;
         display: flex;
         flex-direction: column;
@@ -175,6 +175,17 @@
     text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
     }
 
+    @media (max-width: 1477px) {
+        .container {
+            justify-content: space-around;
+            align-items: center;
+            padding-top: 4rem;
+    }
+        .wrapper {
+            padding: 50px 0;
+        }
+    }
+
     @media (max-width: 1177px) {
         label.logo {
             font-size: 30px;
@@ -188,12 +199,12 @@
         .container {
             flex-direction: column;
             padding-top: 2rem;
-            padding-left: 12rem;
+            padding-left: 10rem;
             align-items: center;
             justify-content: center;
         }
         .wrapper {
-            padding: 50px 0;
+            padding: 60px 100px;
         }
     }
 
@@ -232,22 +243,20 @@
         #check:checked ~ ul {
             left: 0;
         }
-    }
 
-    @media (max-width: 930px) {
         .container {
             flex-direction: column;
             padding-top: 2rem;
-            padding-left: 8.5rem;
+            padding-left: 10rem;
             align-items: center;
             justify-content: center;
         }
         .wrapper {
-            padding: 40px 0;
+            padding: 60px 100px;
         }
     }
 
-    @media (max-width: 760px) {
+    @media (max-width: 1000px) {
         .container {
             flex-direction: column;
             padding-top: 2rem;
@@ -256,11 +265,24 @@
             justify-content: center;
         }
         .wrapper {
-            padding: 40px 0;
+            padding: 40px 100px;
         }
     }
 
-    @media (max-width: 620px) {
+    @media (max-width: 930px) {
+        .container {
+            flex-direction: column;
+            padding-top: 2rem;
+            padding-left: 5rem;
+            align-items: center;
+            justify-content: center;
+        }
+        .wrapper {
+            padding: 40px 100px;
+        }
+    }
+
+    @media (max-width: 760px) {
         .container {
             flex-direction: column;
             padding-top: 2rem;
@@ -269,7 +291,20 @@
             justify-content: center;
         }
         .wrapper {
-            padding: 40px 0;
+            padding: 40px 60px;
+        }
+    }
+
+    @media (max-width: 620px) {
+        .container {
+            flex-direction: column;
+            padding-top: 2rem;
+            padding-left: 1rem;
+            align-items: center;
+            justify-content: center;
+        }
+        .wrapper {
+            padding: 40px 60px;
         }
     }
 
@@ -308,7 +343,7 @@
     <section id="home">
         <div class="container">
             <div class="wrapper">
-                <span class="greet" style="font-weight: bolder; font-size: 50px;">HELLO THERE!</span><br>
+                <span class="greet" style="font-weight: bolder; font-size: 5vw; width: 100%;">HELLO THERE!</span><br>
                 <span>I'm <span class="j">J</span>OVANNY 
                 <span class="j">D</span>E
                 <span class="j">L</span>EON,<br> 
