--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a.btn.active, a.btn:hover {
     align-items: center;
     line-height: 30px;
     position: absolute;
-    top: 55%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -264,6 +264,13 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
 }
 
 @media (max-width: 720px) {
+
+    .container {
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
 
     .container .wrapper .myPic {
         width: 250px;
