--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
         position: fixed;
         width:45%;
         height: 100vh;
-        background: rebeccapurple;
+        background: rgb(2, 2, 2);
         top: 80px;
         right: -100%;
         text-align: center;
