--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
                         HELLO THERE!
                     </p><br>
                     
-                    <p class="name"><span class="j">J</span>ovanny <span class="j">D</span>e <span class="j">L</span>eon</p>
+                    <p class="name">I'm <span class="j">J</span>ovanny <span class="j">D</span>e <span class="j">L</span>eon</p>
                     <span>A <span class="multiText"></span></span>
 
                     <div class="btn-dlcv">
