--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Portfolio</title>
 </head>
 <style>
+
+/* :root {
+    scroll-padding-top: 10px;
+} */
+
     * {
     padding: 0;
     margin: 0;
@@ -86,20 +91,14 @@ a.btn.active, a.btn:hover {
 } 
 
 .container {
-    width: 100vw;
-    background: black;
-    color: white;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 15%;
-    justify-content: center;
-    align-items: center;
-    line-height: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  overflow: auto;
 }
 
 .container .wrapper {
@@ -145,6 +144,7 @@ a.btn.active, a.btn:hover {
 
 .container .board .content {
     width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -199,6 +199,7 @@ font-size: 25px;
 .name {
     font-weight: bolder;
     font-size: 1.5rem;
+    color: white;
 }
 
 .j {
