--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a.btn.active, a.btn:hover {
 
 .container .board .content {
     width: 100vw;
-    height: auto;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
