--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ a.btn.active, a.btn:hover {
   justify-content: space-around;
   flex-direction: row;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .container .wrapper {
