--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a.btn.active, a.btn:hover {
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
   overflow: hidden;
@@ -130,7 +130,7 @@ a.btn.active, a.btn:hover {
 }
 
 .container .board {
-    width: 600px;
+    width: 700px;
     height: 350px;
     background:none;
     border-radius: 25px;
