--- a/index.html
+++ b/index.html
@@ -346,8 +346,10 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
 
 .section {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     background: black;
 }
 
