--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
 
 .section {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     display: flex;
     background: black;
 }
