--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@ text-shadow: 0 0 5px rgba(0, 255, 0, 0.918);
 }
 
 .section {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     background: black;
 }
