--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a.btn.active, a.btn:hover {
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: row;
   align-items: center;
   overflow: hidden;
